Version 2.5.19dev:

* Workaround for Hexagons Joystick Adapter (name is a single non-ASCII letter).
* Workaround for SDL 2 XInput Controller names with #x in the name.
* Recognize --version and --help arguments.
* The bitmap fonts are also now loaded from fs-uae.dat.
* Don't add RTC module on stock A600, A1200 (exp) defaults to MSM6242B.
* Fixed loading CD into drive from CD image list (full path wasn't resolved).
* Updated emulation core from WinUAE 2900b19.

Version 2.5.18dev:

* Disabled / soft-removed PearPC PPC implementation.
* Changed A4000 default floppy drive type to 3.5" HD.
* New option cdfs (boolean). Can be used to disable builtin CDFS.
* Reduced number of OpenAL buffers to pre-2.5.17dev level.
* Updated emulation core from WinUAE 2900b18.

Version 2.5.17dev:

* Initial support for magic mouse / virtual mouse.
* New option mouse_integration (boolean) (Setting it to 1 implies cursor=0,
  automatic_input_grab=0).
* New option cursor (boolean + auto).
* Removed audio_buffer_target_bytes (use audio_buffer_target_size instead).
* Changes to audio buffer fill logic.
* Measure fps internally with floating point numbers.
* Fixed cyberstormppc.rom lookup when using FS-UAE config file.
* Fixed ISO-8859-1 <-> UTF-8 conversion (broke in 2.5.15dev).
* Renamed testing option workbench -> workbenc_disk.
* Updated emulation core from WinUAE 2900b17.

Version 2.5.16dev:

* Fixed legacy uaegfx_card option.
* Make sure early configuration warning messages are displayed in GUI.
* Fixed parsing of memory options.
* Fixed infinite loop when more than one HDF/CD was used with UAE controller.
* Fix for A1000 boot issue with full kickstart ROM.
* Fixed patching of Cloanto A500/A4000 roms (broke in an earlier dev ver).
* Specify rpath for OS X executable (so plugins can find libs from fs-uae).

Version 2.5.15dev:

* FS-UAE memory options are more clever, and can take arguments as both
  KB or MB (with recommended explicit K/M suffix). For example, for memory